[MODINVOICE-302] - Minor improvement: retrieved toList()